--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <meta name="viewport" id="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="这是来自NOISE的个人主页，包含了多个关联站点的入口，你可以通过安装或访问它来获取更多有关NOISE站点的信息">
-	<meta name="keywords" content="NOISE,NOISE主页,诺伊斯,NOISE云盘,NOISE宝藏阁,NOISE导航,宝藏站点,宝藏博主,诺伊斯的主页,">
+	<meta name="description" content="这是来自zdDown的个人主页，包含了多个关联站点的入口，你可以通过安装或访问它来获取更多有关NOISE站点的信息">
+	<meta name="keywords" content="zdDown,zdDown主页,诺伊斯zdDown云盘,zdDown宝藏阁,zdDown导航,宝藏站点,宝藏博主,诺伊斯的主页,">
     <meta itemprop="image" content="./assets/9147.png" />
 	<meta itemprop="image" content="./assets/9147.png" />
 	<meta itemprop="image" content="./assets/9147.png" />
@@ -296,7 +296,7 @@
                         <div class="inner"> <i class="fa-brands fa-telegram"></i><span>TG频道</span></div>
                     </div>
                 </a>
-                <a href="https://www.noiseblogs.top" target="_blank">
+                <a href="https://bg.19492035.xyz" target="_blank">
                     <div class="item" style="--color:rgba(1, 193, 157,0.3)">
                         <div class="bg" style="background-color: rgb(1, 193, 157);"></div>
                         <div class="inner"> <i class="fa-solid fa-blog"></i><span>Blog</span></div>
