--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <meta name="viewport" id="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="这是来自zdDown的个人主页，包含了多个关联站点的入口，你可以通过安装或访问它来获取更多有关NOISE站点的信息">
+	<meta name="description" content="这是来自zdDown的个人主页，包含了多个关联站点的入口，你可以通过安装或访问它来获取更多有关zdDown站点的信息">
 	<meta name="keywords" content="zdDown,zdDown主页,诺伊斯zdDown云盘,zdDown宝藏阁,zdDown导航,宝藏站点,宝藏博主,诺伊斯的主页,">
     <meta itemprop="image" content="./assets/9147.png" />
 	<meta itemprop="image" content="./assets/9147.png" />
 	<meta itemprop="image" content="./assets/9147.png" />
     <meta name="google-adsense-account" content="ca-pub-1078287385751140">
     <link rel="icon" href="./assets/favicon.png" type="image/png" />
-    <title>Noise主页</title>
+    <title>zdDown主页</title>
     <!-- 图标引用 引入自托管fontawesome免费web包-->
     <link rel="stylesheet" href="assets/fontawesome-free-6.7.2/css/all.css">
      <!-- 图标引用 引入自托管fontawesome免费web包-->
@@ -143,7 +143,7 @@
                 </a>
             </li>
             <li class="menu-item">
-                <a href="https://github.com/rcy1314/noisework" target="_blank" style="color: white; text-decoration: none;">
+                <a href="https://github.com" target="_blank" style="color: white; text-decoration: none;">
                     <svg xmlns="http://www.w3.org/2000/svg" height="16" width="16" viewBox="0 0 512 512"><path d="M256 464a208 208 0 1 1 0-416 208 208 0 1 1 0 416zM256 0a256 256 0 1 0 0 512A256 256 0 1 0 256 0zM376.9 294.6c4.5-4.2 7.1-10.1 7.1-16.3c0-12.3-10-22.3-22.3-22.3H304V160c0-17.7-14.3-32-32-32l-32 0c-17.7 0-32 14.3-32 32v96H150.3C138 256 128 266 128 278.3c0 6.2 2.6 12.1 7.1 16.3l107.1 99.9c3.8 3.5 8.7 5.5 13.8 5.5s10.1-2 13.8-5.5l107.1-99.9z"/></svg>
                     <span style="margin-left: -4.5px;">主题</span>
                 </a>
@@ -217,7 +217,7 @@
     </div>
     <div class="main">
         <div class="about">
-            <h2 class="chtitle">欢迎访问<span>Noise</span>主页</h2>
+            <h2 class="chtitle">欢迎访问<span>zdDown</span>主页</h2>
             <div id="clear">
                 <div id="avatar">
                     <a title="点击可切换背景" target="_blank" id='morelink' class="bt" onclick="changeBackground()"><i class="fa-solid fa-compass"></i></a>
@@ -284,7 +284,7 @@
                 </div>
             </a>
                </a>
-                <a href="https://noise.zhubai.love"target="_blank">
+                <a href="https://zdDown.zhubai.love"target="_blank">
                     <div class="item" style="--color:rgba(35, 45, 55,0.3)">
                         <div class="bg" style="background-color: rgb(1, 193, 157);"></div>
                         <div class="inner"><i class="fa-solid fa-square-envelope"></i><span>竹白</span></div>
@@ -327,13 +327,13 @@
                   </a>
                 <div class="project">
                     <i class="fa-solid fa-star"></i>
-                    <a href="https://www.noisedh.link" target="_blank"><h3>Noise导航站</h3></a>
+                    <a href="https://www.noisedh.link" target="_blank"><h3>zdDown导航站</h3></a>
                     <p>静态化综合导航站</p>
                     <div class="language"><div style="--color:#f1e05a">综合且全面</div></div>
                 </div>
                 <div class="project">
                     <i class="fa-solid fa-star"></i>
-                    <a href="https://noisevip.cn" target="_blank"><h3>NOISE&宝藏阁</h3></a>
+                    <a href="https://noisevip.cn" target="_blank"><h3>zdDown&宝藏阁</h3></a>
                     <p>Wordpress站点</p>
                     <div class="language"><div style="--color:#e34c26">强大的资源分类支持</div></div>
                 </div>
@@ -363,7 +363,7 @@
                 </div>
                 <div class="project">
                     <i class="fa-solid fa-star"></i>
-                    <a href="./photo/index.html" target="_blank"><h3>NOISE摄影图库</h3></a>
+                    <a href="./photo/index.html" target="_blank"><h3>zdDown摄影图库</h3></a>
                     <p>相册分享</p>
                     <div class="language"><div style="--color:#e34c26">爱生活，爱摄影</div></div>
                 </div>
