--- a/e/talk/index.html
+++ b/e/talk/index.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="referrer" content="no-referrer">
-    <meta itemprop="name" content="NOISE的说说">
-    <meta name="description" content="这是来自Noise的个人说说空间，通过本页你可以浏览我的一些日常记录.使用memos作为后端。">
-    <meta name="keywords" content="noise主页,个人主页,朋友圈,说说空间">
+    <meta itemprop="name" content="zdDown的说说">
+    <meta name="description" content="这是来自zdDown的个人说说空间，通过本页你可以浏览我的一些日常记录.使用memos作为后端。">
+    <meta name="keywords" content="zdDown主页,个人主页,朋友圈,说说空间">
     <meta itemprop="image" content="https://s2.loli.net/2024/11/20/MBzRuHe86nWi2xC.png">
     <link rel="icon" href="./assets/img/avatar.png" type="image/png" />
     <link href="./assets/css/style.css" rel="stylesheet" type="text/css">
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="./assets/css/waline.css" />
     <link rel="stylesheet" href="./assets/css/friendlink.css">
 
-    <title>NOISE的说说</title>
+    <title>zdDown的说说</title>
     <style type='text/css'>
         header {
             position: relative;
@@ -395,7 +395,7 @@
         <div class="menu">
             <div class="title">Memos空间...</div>
             <div class="pages">
-                <a href="https://memos.noisework.cn" target="_blank" rel="noopener noreferrer" style="font-size: 14px; background: linear-gradient(90deg, #5fbcff, #7b84fe); 
+                <a href="https://memos.zdDown.icu" target="_blank" rel="noopener noreferrer" style="font-size: 14px; background: linear-gradient(90deg, #5fbcff, #7b84fe); 
                           -webkit-background-clip: text; 
                           -webkit-text-fill-color: transparent;">前往查看</a>
             </div>
@@ -403,7 +403,7 @@
 
         <div class="profile">
             <div class="profile-info">
-                <div class="title">Noise</div>
+                <div class="title">zdDown</div>
                 <div class="description">执迷不悟</div>
             </div>
             <img src="./assets/img/avatar.png" onclick="changeBackground()" alt="头像">
@@ -416,7 +416,7 @@
         <div class="main-title">这里记录碎片化的想法</div>
 
         <blockquote>
-            <p>NOISE <del>说说空间</del>,忆往昔- <em>都是故事</em></p>
+            <p>zdDown <del>说说空间</del>,忆往昔- <em>都是故事</em></p>
         </blockquote>
 
         <div class="total">已记录 <span id="total">0</span>条 🎉</div>
@@ -552,7 +552,7 @@
             <div class="rssmergecard-content">
                 <div class="rssmergecard-title"><i class="fa-solid fa-user-plus"></i>关于本页</div>
                 <p class="rssmergecard-description">这是一个通过 Memos API 渲染的静态网页</p>
-                <p class="rssmergecard-description">由Noise使用memos发布，使用 <a href="https://memos.noisework.cn" target="_blank" rel="noopener noreferrer" style=" background: linear-gradient(90deg, #ba5fff, #7bc1fe); 
+                <p class="rssmergecard-description">由zdDown使用memos发布，使用 <a href="https://bg.19492035.xyz" target="_blank" rel="noopener noreferrer" style=" background: linear-gradient(90deg, #ba5fff, #7bc1fe); 
                            -webkit-background-clip: text; 
                            -webkit-text-fill-color: transparent;">点击查看 </a>由于Memos官方不停更改版本的API，为固定化本页，使用支持V0.23.0版本，部署为docker run -d --name memos -p 5230:5230 -v ~/.memos/:/var/opt/memos neosmemo/memos:0.23.0</p>
                 <p class="rssmergecard-description">RSS订阅站点：<a href="https://memos.noisework.cn/u/noise/rss.xml" target="_blank" rel="noopener noreferrer" style=" background: linear-gradient(90deg, #ba5fff, #7bc1fe); 
@@ -667,12 +667,12 @@
 
     <script type="text/javascript">
         var memos = {
-            host: 'https://memos.noisework.cn/', //修改为你自己的memos服务地址，结尾要有/
+            host: 'https://memos.zdDown.icu/', //修改为你自己的memos服务地址，结尾要有/
             limit: '13',
             creatorId: '1',
             domId: '#memos',
             username: 'noise',
-            name: '诺伊斯',
+            name: 'zdDown',
             language: 'zh-CN',
             APIVersion: 'new',
             total: true,
