--- a/e/talk/index.html
+++ b/e/talk/index.html
@@ -667,11 +667,11 @@
 
     <script type="text/javascript">
         var memos = {
-            host: 'https://memos.zdDown.icu/', //修改为你自己的memos服务地址，结尾要有/
+            host: 'https://memos.zddown.icu/', //修改为你自己的memos服务地址，结尾要有/
             limit: '13',
             creatorId: '1',
             domId: '#memos',
-            username: 'noise',
+            username: 'zdDown',
             name: 'zdDown',
             language: 'zh-CN',
             APIVersion: 'new',
