--- a/e/talk/index.html
+++ b/e/talk/index.html
@@ -598,7 +598,7 @@
                 }
 
                 function momxc() {
-                    var birthDay = NewDate("2020-12-09");
+                    var birthDay = NewDate("2025-04-09");
                     var today = new Date();
                     var timeold = today.getTime() - birthDay.getTime();
                     var msPerDay = 24 * 60 * 60 * 1000;
@@ -619,9 +619,9 @@
             <script>
                 document.write(new Date().getFullYear())
             </script>
-            <a href="https://www.noisework.cn" target="_blank" style="font-size: 14px; background: linear-gradient(90deg, #5fbcff, #7b84fe); 
+            <a href="https://bg.19492035.xyz" target="_blank" style="font-size: 14px; background: linear-gradient(90deg, #5fbcff, #7b84fe); 
             -webkit-background-clip: text; 
-            -webkit-text-fill-color: transparent;">NOISE</a> All Rights Reserved.
+            -webkit-text-fill-color: transparent;">zdDown</a> All Rights Reserved.
         </p>
     </footer>
 
