--- a/e/talk/index.html
+++ b/e/talk/index.html
@@ -10,7 +10,7 @@
     <meta name="description" content="这是来自zdDown的个人说说空间，通过本页你可以浏览我的一些日常记录.使用memos作为后端。">
     <meta name="keywords" content="zdDown主页,个人主页,朋友圈,说说空间">
     <meta itemprop="image" content="https://s2.loli.net/2024/11/20/MBzRuHe86nWi2xC.png">
-    <link rel="icon" href="./assets/img/avatar.png" type="image/png" />
+    <link rel="icon" href="./assets/img/fengche.gif" type="image/png" />
     <link href="./assets/css/style.css" rel="stylesheet" type="text/css">
     <link href="./assets/css/APlayer.min.css" rel="stylesheet" type="text/css">
     <link href="./assets/css/highlight.github.min.css" rel="stylesheet" type="text/css">
@@ -406,7 +406,7 @@
                 <div class="title">zdDown</div>
                 <div class="description">执迷不悟</div>
             </div>
-            <img src="./assets/img/avatar.png" onclick="changeBackground()" alt="头像">
+            <img src="./assets/img/fengche.gif" onclick="changeBackground()" alt="头像">
         </div>
 
         <div class='theme-toggle'>🌓</div>
