--- a/e/talk/index.html
+++ b/e/talk/index.html
@@ -484,14 +484,14 @@
                 <div class="friendlinks-container">
                     <div class="friendlinks-card">
                         <div class="avatar">
-                            <a href="https://ladfenemies.cc/">
+                            <a href="https://note.noisework.cn/">
                                 <img alt="" loading="lazy" decoding="async"
                                     src="https://ipfs.crossbell.io/ipfs/QmNXCVARSQqT1gfmo6sPpaRuphK9pB6cbLdcjniGobZytR">
                             </a>
                         </div>
                         <div class="info">
-                            <a class="friendname" target="_blank" href="https://ladfenemies.cc/">leaf</a>
-                            <p class="frienddescription">量化开发</p>
+                            <a class="friendname" target="_blank" href="https://note.noisework.cn/">leaf</a>
+                            <p class="frienddescription">Noise</p>
                         </div>
                     </div>
                     <div class="friendlinks-card">
@@ -719,7 +719,7 @@
         import { init } from 'https://unpkg.com/@waline/client@v3/dist/waline.js';
         init({
             el: '#waline',
-            serverURL: 'https://ment.noisework.cn', //修改为你自己的waline服务端地址
+            serverURL: '   ', //修改为你自己的waline服务端地址
             reaction: 'true', 
             meta: ['nick', 'mail', 'link'],
             requiredMeta: ['mail', 'nick'],
