--- a/e/talk/index.html
+++ b/e/talk/index.html
@@ -490,8 +490,8 @@
                             </a>
                         </div>
                         <div class="info">
-                            <a class="friendname" target="_blank" href="https://note.noisework.cn/">leaf</a>
-                            <p class="frienddescription">Noise</p>
+                            <a class="friendname" target="_blank" href="https://note.noisework.cn/">Noise</a>
+                            <p class="frienddescription">量化开发</p>
                         </div>
                     </div>
                     <div class="friendlinks-card">
