--- a/e/talk/index.html
+++ b/e/talk/index.html
@@ -719,7 +719,7 @@
         import { init } from 'https://unpkg.com/@waline/client@v3/dist/waline.js';
         init({
             el: '#waline',
-            serverURL: '   ', //修改为你自己的waline服务端地址
+            serverURL: 'https://waline.19492035.xyz', //修改为你自己的waline服务端地址
             reaction: 'true', 
             meta: ['nick', 'mail', 'link'],
             requiredMeta: ['mail', 'nick'],
