--- a/index.html
+++ b/index.html
@@ -264,36 +264,36 @@
         <div class="find">
             <h2 class="chtitle"><span>社交</span>媒体</h2>
             <div id="linkbox">
-                <a href="https://twitter.com/liangwenhao3" target="_blank">
+                <a href="https://im.19492035.xyz/file/1742651920554.jpg" target="_blank">
                     <div class="item" style="--color: rgba(40, 169, 224,0.3)">
                         <div class="bg" style="background-color:rgb(40, 169, 224)"></div>
                         <div class="inner"><i class="fa-brands fa-x-twitter"></i><span>Twitter</span></div>
                     </div>
                 </a>
-                <a href="https://github.com/rcy1314" target="_blank">
+                <a href="https://im.19492035.xyz/file/1742651920554.jpg" target="_blank">
                     <div class="item" style="--color:rgba(53, 53, 53,0.3)">
                         <div class="bg" style="background-color:rgb(53, 53, 53)"></div>
                         <div class="inner"> <i class="fa-brands fa-github"></i><span>Github</span></div>
                     </div>
                 </a>
                <!-- 弹出效果 -->
-               <a href="#" onclick="showImage2()">
+               <a href="https://img.19492035.xyz/file/1743351790885.jpg" onclick="showImage2()">
                 <div class="item" style="--color:rgba(0, 102, 255,0.3)">
                     <div class="bg" style="background-color:rgb(0, 102, 255)"></div>
                     <div class="inner"> <i class="fa-brands fa-weixin"></i><span>公众号</span></div>
                 </div>
             </a>
                </a>
-                <a href="https://zdDown.zhubai.love"target="_blank">
+                <a href="https://www.zddown.icu"target="_blank">
                     <div class="item" style="--color:rgba(35, 45, 55,0.3)">
                         <div class="bg" style="background-color: rgb(1, 193, 157);"></div>
-                        <div class="inner"><i class="fa-solid fa-square-envelope"></i><span>竹白</span></div>
+                        <div class="inner"><i class="fa-solid fa-square-envelope"></i><span>资源网</span></div>
                     </div>
                 </a>
-                <a href="https://tg.noisework.cn" target="_blank">
+                <a href="https://nav.19492035.xyz" target="_blank">
                     <div class="item" style="--color:rgba(35, 45, 55,0.3)">
                         <div class="bg" style="background-color:rgb(35, 45, 55)"></div>
-                        <div class="inner"> <i class="fa-brands fa-telegram"></i><span>TG频道</span></div>
+                        <div class="inner"> <i class="fa-brands fa-telegram"></i><span>导航</span></div>
                     </div>
                 </a>
                 <a href="https://bg.19492035.xyz" target="_blank">
@@ -303,16 +303,16 @@
                     </div>
                 </a>
                 <!-- 弹出效果 -->
-                <a href="#" onclick="showImage1()">
+                <a href="https://img.19492035.xyz/file/1743136710939.png" onclick="showImage1()">
                     <div class="item" style="--color:rgba(35, 45, 55,0.3)">
                         <div class="bg" style="background-color: rgb(43, 41, 41);"></div>
-                        <div class="inner"> <i class="fa-brands fa-weixin"></i><span>微信号</span></div>
+                        <div class="inner"> <i class="fa-brands fa-weixin"></i><span>赞助</span></div>
                     </div>
                 </a>
                 <a href="https://sspai.com/u/noise/updates" target="_blank">
                     <div class="item" style="--color:rgba(28, 64, 100)">
                         <div class="bg" style="background-color:rgb(220, 92, 122)"></div>
-                        <div class="inner"><i class="fa-solid fa-user-astronaut"></i><span>少数派</span></div>
+                        <div class="inner"><i class="fa-solid fa-user-astronaut"></i><span>资源小程序</span></div>
                     </div>
                 </a>    
             </div>
@@ -767,7 +767,7 @@
     init({
       el: '#waline',
       reaction: 'true', 
-      serverURL: 'https://ment.noisework.cn',
+      serverURL: 'https://waline.19492035.xyz',
 	  meta: ['nick','mail','link'],
       requiredMeta: ['mail','nick'],
       pageview: true,
