--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                     <svg xmlns="http://www.w3.org/2000/svg" height="16" width="18" viewBox="0 0 576 512">
                         <path d="M385.2 167.6c6.4 0 12.6 .3 18.8 1.1C387.4 90.3 303.3 32 207.7 32 100.5 32 13 104.8 13 197.4c0 53.4 29.3 97.5 77.9 131.6l-19.3 58.6 68-34.1c24.4 4.8 43.8 9.7 68.2 9.7 6.2 0 12.1-.3 18.3-.8-4-12.9-6.2-26.6-6.2-40.8-.1-84.9 72.9-154 165.3-154zm-104.5-52.9c14.5 0 24.2 9.7 24.2 24.4 0 14.5-9.7 24.2-24.2 24.2-14.8 0-29.3-9.7-29.3-24.2 .1-14.7 14.6-24.4 29.3-24.4zm-136.4 48.6c-14.5 0-29.3-9.7-29.3-24.2 0-14.8 14.8-24.4 29.3-24.4 14.8 0 24.4 9.7 24.4 24.4 0 14.6-9.6 24.2-24.4 24.2zM563 319.4c0-77.9-77.9-141.3-165.4-141.3-92.7 0-165.4 63.4-165.4 141.3S305 460.7 397.6 460.7c19.3 0 38.9-5.1 58.6-9.9l53.4 29.3-14.8-48.6C534 402.1 563 363.2 563 319.4zm-219.1-24.5c-9.7 0-19.3-9.7-19.3-19.6 0-9.7 9.7-19.3 19.3-19.3 14.8 0 24.4 9.7 24.4 19.3 0 10-9.7 19.6-24.4 19.6zm107.1 0c-9.7 0-19.3-9.7-19.3-19.6 0-9.7 9.7-19.3 19.3-19.3 14.5 0 24.4 9.7 24.4 19.3 .1 10-9.9 19.6-24.4 19.6z"/>
                     </svg>
-                    <span style="margin-left: -4.5px;">联系</span>
+                    <span style="margin-left: -4.5px;">喝咖啡</span>
                 </a>
             </li>
             <li class="menu-item">
@@ -277,7 +277,7 @@
                     </div>
                 </a>
                <!-- 弹出效果 -->
-               <a href="https://img.19492035.xyz/file/1743351790885.jpg" onclick="showImage2()">
+               <a href="#" onclick="showImage2()">
                 <div class="item" style="--color:rgba(0, 102, 255,0.3)">
                     <div class="bg" style="background-color:rgb(0, 102, 255)"></div>
                     <div class="inner"> <i class="fa-brands fa-weixin"></i><span>公众号</span></div>
@@ -303,18 +303,18 @@
                     </div>
                 </a>
                 <!-- 弹出效果 -->
-                <a href="https://img.19492035.xyz/file/1743136710939.png" onclick="showImage1()">
+                <a href="#" onclick="showImage1()">
                     <div class="item" style="--color:rgba(35, 45, 55,0.3)">
                         <div class="bg" style="background-color: rgb(43, 41, 41);"></div>
-                        <div class="inner"> <i class="fa-brands fa-weixin"></i><span>赞助</span></div>
+                        <div class="inner"> <i class="fa-brands fa-weixin"></i><span>咖啡</span></div>
                     </div>
                 </a>
-                <a href="https://sspai.com/u/noise/updates" target="_blank">
-                    <div class="item" style="--color:rgba(28, 64, 100)">
-                        <div class="bg" style="background-color:rgb(220, 92, 122)"></div>
-                        <div class="inner"><i class="fa-solid fa-user-astronaut"></i><span>资源小程序</span></div>
-                    </div>
-                </a>    
+                <a href="#" onclick="showImag3()">
+                <div class="item" style="--color:rgba(0, 102, 255,0.3)">
+                    <div class="bg" style="background-color:rgb(0, 102, 255)"></div>
+                    <div class="inner"> <i class="fa-brands fa-weixin"></i><span>微信小程序</span></div>
+                </div>
+            </a>
             </div>
         </div>
         <div class="work">
@@ -738,9 +738,20 @@
     <!--向下滑动监听结束-->    
     <!--所有弹出图片js-->  
     <script>
-        //微信图
+        //赞助图
         function showImage1() {
-            var imagePath = "./lianxi/weixin.png";
+            var imagePath = "https://img.19492035.xyz/file/1743136710939.png";
+            document.getElementById('popupImage1').src = imagePath;
+            document.getElementById('imageOverlay1').style.display = 'block';
+        }
+    
+        document.getElementById('imageOverlay1').addEventListener('click', function() {
+            this.style.display = 'none';
+            document.getElementById('popupImage1').src = '';
+        });
+	      //赞助图
+        function showImage3() {
+            var imagePath = "https://img.19492035.xyz/file/1742824264213.jpg";
             document.getElementById('popupImage1').src = imagePath;
             document.getElementById('imageOverlay1').style.display = 'block';
         }
@@ -751,7 +762,7 @@
         });
         //公众号图
         function showImage2() {
-            var imagePath = "./assets/gongzhonghao.jpg";
+            var imagePath = "https://img.19492035.xyz/file/1743351790885.jpg";
             document.getElementById('popupImage2').src = imagePath;
             document.getElementById('imageOverlay2').style.display = 'block';
         }
