--- a/index.html
+++ b/index.html
@@ -161,6 +161,10 @@
         <img id="popupImage1" style="position:absolute; top:50%; left:50%; transform:translate(-50%,-50%);" src="" alt="Popup Image">
         <a href="javascript:void(0)" onclick="closePopup()" style="position:absolute; top:10px; right:10px; color:white; font-size:24px;">&times;</a>
     </div>
+	<div id="imageOverlay3" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.7); z-index:1000;">
+        <img id="popupImage3" style="position:absolute; top:50%; left:50%; transform:translate(-50%,-50%);" src="" alt="Popup Image">
+        <a href="javascript:void(0)" onclick="closePopup()" style="position:absolute; top:10px; right:10px; color:white; font-size:24px;">&times;</a>
+    </div>
     <div id="imageOverlay2" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.7); z-index:1000;">
         <img id="popupImage2" style="position:absolute; top:50%; left:50%; transform:translate(-50%,-50%);" src="" alt="Popup Image">
         <a href="javascript:void(0)" onclick="closePopup()" style="position:absolute; top:10px; right:10px; color:white; font-size:24px;">&times;</a>
@@ -312,7 +316,7 @@
                 <a href="#" onclick="showImag3()">
                 <div class="item" style="--color:rgba(0, 102, 255,0.3)">
                     <div class="bg" style="background-color:rgb(0, 102, 255)"></div>
-                    <div class="inner"> <i class="fa-brands fa-weixin"></i><span>微信小程序</span></div>
+                    <div class="inner"> <i class="fa-brands fa-weixin"></i><span>小程序</span></div>
                 </div>
             </a>
             </div>
@@ -749,16 +753,16 @@
             this.style.display = 'none';
             document.getElementById('popupImage1').src = '';
         });
-	      //赞助图
+	      //小程序
         function showImage3() {
             var imagePath = "https://img.19492035.xyz/file/1742824264213.jpg";
-            document.getElementById('popupImage1').src = imagePath;
-            document.getElementById('imageOverlay1').style.display = 'block';
+            document.getElementById('popupImage3').src = imagePath;
+            document.getElementById('imageOverlay3').style.display = 'block';
         }
     
-        document.getElementById('imageOverlay1').addEventListener('click', function() {
+        document.getElementById('imageOverlay3').addEventListener('click', function() {
             this.style.display = 'none';
-            document.getElementById('popupImage1').src = '';
+            document.getElementById('popupImage3').src = '';
         });
         //公众号图
         function showImage2() {
