--- a/index.html
+++ b/index.html
@@ -139,13 +139,13 @@
                     <svg xmlns="http://www.w3.org/2000/svg" height="16" width="18" viewBox="0 0 576 512">
                         <path d="M385.2 167.6c6.4 0 12.6 .3 18.8 1.1C387.4 90.3 303.3 32 207.7 32 100.5 32 13 104.8 13 197.4c0 53.4 29.3 97.5 77.9 131.6l-19.3 58.6 68-34.1c24.4 4.8 43.8 9.7 68.2 9.7 6.2 0 12.1-.3 18.3-.8-4-12.9-6.2-26.6-6.2-40.8-.1-84.9 72.9-154 165.3-154zm-104.5-52.9c14.5 0 24.2 9.7 24.2 24.4 0 14.5-9.7 24.2-24.2 24.2-14.8 0-29.3-9.7-29.3-24.2 .1-14.7 14.6-24.4 29.3-24.4zm-136.4 48.6c-14.5 0-29.3-9.7-29.3-24.2 0-14.8 14.8-24.4 29.3-24.4 14.8 0 24.4 9.7 24.4 24.4 0 14.6-9.6 24.2-24.4 24.2zM563 319.4c0-77.9-77.9-141.3-165.4-141.3-92.7 0-165.4 63.4-165.4 141.3S305 460.7 397.6 460.7c19.3 0 38.9-5.1 58.6-9.9l53.4 29.3-14.8-48.6C534 402.1 563 363.2 563 319.4zm-219.1-24.5c-9.7 0-19.3-9.7-19.3-19.6 0-9.7 9.7-19.3 19.3-19.3 14.8 0 24.4 9.7 24.4 19.3 0 10-9.7 19.6-24.4 19.6zm107.1 0c-9.7 0-19.3-9.7-19.3-19.6 0-9.7 9.7-19.3 19.3-19.3 14.5 0 24.4 9.7 24.4 19.3 .1 10-9.9 19.6-24.4 19.6z"/>
                     </svg>
-                    <span style="margin-left: -4.5px;">喝咖啡</span>
+                    <span style="margin-left: -4.5px;">咖啡</span>
                 </a>
             </li>
             <li class="menu-item">
                 <a href="https://github.com" target="_blank" style="color: white; text-decoration: none;">
                     <svg xmlns="http://www.w3.org/2000/svg" height="16" width="16" viewBox="0 0 512 512"><path d="M256 464a208 208 0 1 1 0-416 208 208 0 1 1 0 416zM256 0a256 256 0 1 0 0 512A256 256 0 1 0 256 0zM376.9 294.6c4.5-4.2 7.1-10.1 7.1-16.3c0-12.3-10-22.3-22.3-22.3H304V160c0-17.7-14.3-32-32-32l-32 0c-17.7 0-32 14.3-32 32v96H150.3C138 256 128 266 128 278.3c0 6.2 2.6 12.1 7.1 16.3l107.1 99.9c3.8 3.5 8.7 5.5 13.8 5.5s10.1-2 13.8-5.5l107.1-99.9z"/></svg>
-                    <span style="margin-left: -4.5px;">主题</span>
+                    <span style="margin-left: -4.5px;">开发</span>
                 </a>
             </li>
             <li class="menu-item-divider"></li>
@@ -308,9 +308,9 @@
                 </a>
                 <!-- 弹出效果 -->
                 <a href="#" onclick="showImage1()">
-                    <div class="item" style="--color:rgba(35, 45, 55,0.3)">
-                        <div class="bg" style="background-color: rgb(43, 41, 41);"></div>
-                        <div class="inner"> <i class="fa-brands fa-weixin"></i><span>咖啡</span></div>
+                    <div class="item" style="--color:rgba(0, 102, 255,0.3)">
+                        <div class="bg" style="background-color: rgb(0, 102, 255);"></div>
+                        <div class="inner"> <i class="fa-brands fa-weixin"></i><span>喝咖啡</span></div>
                     </div>
                 </a>
                 <a href="#" onclick="showImag3()">
