--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
                 <a href="https://img.19492035.xyz/file/1742824264213.jpg" target="_blank">
                     <div class="item" style="--color:rgba(35, 45, 55,0.3)">
                         <div class="bg" style="background-color:rgb(35, 45, 55)"></div>
-                        <div class="inner"> <i class="fa-brands fa-telegram"></i><span>小程序</span></div>
+                        <div class="inner"> <i class="fa-brands fa-weixn"></i><span>小程序</span></div>
                     </div>
                 </a>
             </div>
