--- a/e/talk/index.html
+++ b/e/talk/index.html
@@ -554,7 +554,7 @@
                 <p class="rssmergecard-description">这是一个通过 Memos API 渲染的静态网页</p>
                 <p class="rssmergecard-description">     <a href="https://bg.19492035.xyz" target="_blank" rel="noopener noreferrer" style=" background: linear-gradient(90deg, #ba5fff, #7bc1fe); 
                            -webkit-background-clip: text; 
-                           -webkit-text-fill-color: transparent;">点击查看 </a>由于Memos官方不停更改版本的API，为固定化本页，使用支持V0.23.0版本，部署为docker run -d --name memos -p 5230:5230 -v ~/.memos/:/var/opt/memos neosmemo/memos:0.23.0</p>
+                           -webkit-text-fill-color: transparent;">   </a>由于Memos官方不停更改版本的API，为固定化本页，使用支持V0.23.0版本，部署为docker run -d --name memos -p 5230:5230 -v ~/.memos/:/var/opt/memos neosmemo/memos:0.23.0</p>
                 <p class="rssmergecard-description">      <a href="https://memos.noisework.cn/u/noise/rss.xml" target="_blank" rel="noopener noreferrer" style=" background: linear-gradient(90deg, #ba5fff, #7bc1fe); 
                            -webkit-background-clip: text; 
                            -webkit-text-fill-color: transparent;">    </a></p>
