--- a/e/talk/index.html
+++ b/e/talk/index.html
@@ -406,7 +406,7 @@
                 <div class="title">zdDown</div>
                 <div class="description">执迷不悟</div>
             </div>
-            <img src="./assets/img/fengche.gif" onclick="changeBackground()" alt="头像">
+            <img src="https://img.19492035.xyz/file/1742566176776.png" onclick="changeBackground()" alt="头像">
         </div>
 
         <div class='theme-toggle'>🌓</div>
@@ -416,7 +416,7 @@
         <div class="main-title">这里记录碎片化的想法</div>
 
         <blockquote>
-            <p>zdDown <del>说说空间</del>,忆往昔- <em>都是故事</em></p>
+            <p>zdDown <del>说说空间</del>,春风若有怜花意 - <em>可否许我在少年</em></p>
         </blockquote>
 
         <div class="total">已记录 <span id="total">0</span>条 🎉</div>
@@ -672,7 +672,7 @@
             creatorId: '1',
             domId: '#memos',
             username: 'zdDown',
-            name: 'zdDown',
+            name: 'Tom',
             language: 'zh-CN',
             APIVersion: 'new',
             total: true,
